--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <p>我是 <a href="https://github.com/m4n5ter">M4n5ter</a> ，将在这里记录我的学习过程 ：)</p>
 <p><em>参照 rust course 而建</em></p>
 </blockquote>
-<img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/smile.jpg?raw=true">
+<img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/smile2.png?raw=true">
 
                     <div id="giscus-container"></div>
                 </main>
