deploy: 23520db009345398fac00fdabb3c00e9fb55e647

--- a/rust/mini-redis/io.html
+++ b/rust/mini-redis/io.html
@@ -287,6 +287,7 @@ async fn main() -&gt; io::Result&lt;()&gt; {
     }
 }
 </code></pre></pre>
+<p>就像前面说的，这个工具函数接收一个 reader 参数和一个 writer 参数，并且将数据从一个 copy 到另一个中。</p>
 
                     <div id="giscus-container"></div>
                 </main>
