--- a/rust/mini-redis/framing.html
+++ b/rust/mini-redis/framing.html
@@ -173,7 +173,77 @@
                 </div>
                 <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="framing-todo"><a class="header" href="#framing-todo">Framing TODO</a></h1>
+<h2 id="framing"><a class="header" href="#framing">Framing</a></h2>
+<p>我们接下来将会应用我们在 I/O 章节的所学，并实现 Mini-Redis 的框架层（framing layer，或许应该叫帧层） 。Framing 是获取 byte stream 并转化成 a stream of frames（帧） 的过程。一个 frame (帧) 是两个对等端（此处应该指代 client and server）之间传输数据的单位。Redis protocal frame 定义如下：</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use bytes::Bytes;
+
+enum Frame {
+    Simple(String),
+    Error(String),
+    Integer(u64),
+    Bulk(Bytes),
+    Null,
+    Array(Vec&lt;Frame&gt;),
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>注意 Frame 是如何包含没有任何语义的数据的， Command 解析和实现发生再更高级的层，而不在 Frame。</p>
+<p>对于 HTTP 来说，一个 frame 可能看起来像这样：</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>enum HttpFrame {
+    RequestHead {
+        method: Method,
+        uri: Uri,
+        version: Version,
+        headers: HeaderMap,
+    },
+    ResponseHead {
+        status: StatusCode,
+        version: Version,
+        headers: HeaderMap,
+    },
+    BodyChunk {
+        chunk: Bytes,
+    },
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>为了实现 Mini-Redis 的 frame，我们将会实现一个 <code>Connecton</code> 结构来包装一个 <code>TcpStream</code> 和 reads/writes <code>mini_redis::Frame</code> values。</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use tokio::net::TcpStream;
+use mini_redis::{Frame, Result};
+
+struct Connection {
+    stream: TcpStream,
+    // ... other fields here
+}
+
+impl Connection {
+    /// Read a frame from the connection.
+    /// 
+    /// Returns `None` if EOF is reached
+    pub async fn read_frame(&amp;mut self)
+        -&gt; Result&lt;Option&lt;Frame&gt;&gt;
+    {
+        // implementation here
+    }
+
+    /// Write a frame to the connection.
+    pub async fn write_frame(&amp;mut self, frame: &amp;Frame)
+        -&gt; Result&lt;()&gt;
+    {
+        // implementation here
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>可以在<a href="https://redis.io/topics/protocol">这里</a> 找到 Redis wire protocal 的细节。完整的 <code>Connection</code> 代码在<a href="https://github.com/tokio-rs/mini-redis/blob/tutorial/src/connection.rs">这里</a> 。</p>
+<h2 id="buffered-reads-带缓冲的读"><a class="header" href="#buffered-reads-带缓冲的读">Buffered reads （带缓冲的读）</a></h2>
+<p><code>read_frame</code> 方法在返回前会等待一个完整的 frame 被接收。</p>
 
                     <div id="giscus-container"></div>
                 </main>
