--- a/print.html
+++ b/print.html
@@ -2241,8 +2241,205 @@ impl Connection {
 <span class="boring">}
 </span></code></pre></pre>
 <p>可以在<a href="https://redis.io/topics/protocol">这里</a> 找到 Redis wire protocal 的细节。完整的 <code>Connection</code> 代码在<a href="https://github.com/tokio-rs/mini-redis/blob/tutorial/src/connection.rs">这里</a> 。</p>
-<h2 id="buffered-reads-带缓冲的读"><a class="header" href="#buffered-reads-带缓冲的读">Buffered reads （带缓冲的读）</a></h2>
-<p><code>read_frame</code> 方法在返回前会等待一个完整的 frame 被接收。</p>
+<h2 id="buffered-reads-带缓冲地读"><a class="header" href="#buffered-reads-带缓冲地读">Buffered reads （带缓冲地读）</a></h2>
+<p><code>read_frame</code> 方法在返回前会等待一个完整的 frame 被接收。单个 <code>TcpStream::read()</code> 调用可能会返回一个任意数量的数据。这个数据可能是一个完整的 frame、一个不完整 frame 或者多个 frame。如果接收到了一个不完整的 frame，数据会被放入 buffer 并且会继续从 socket 读更多数据。如果接收到了多个 frame，第一个帧会被返回，剩下的数据会被放入 buffer 直到下次 <code>read_frame</code> 调用。</p>
+<p>为了实现这个， <code>Connection</code> 需要一个 read buffer 字段。数据从 socket 被读入这个 read buffer。当一个帧被解析，相对应的数据会从 buffer 中被移除。</p>
+<p>我们将会用 <code>BytesMut</code> 作为 buffer type。它是一个可变版本的 <code>Bytes</code> 。</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use bytes::BytesMut;
+use tokio::net::TcpStream;
+
+pub struct Connection {
+    stream: TcpStream,
+    buffer: BytesMut,
+}
+
+impl Connection {
+    pub fn new(stream: TcpStream) -&gt; Connection {
+        Connection {
+            stream,
+            // Allocate the buffer with 4kb of capacity.
+            buffer: BytesMut::with_capacity(4096),
+        }
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>下面，我们实现 <code>read_frame()</code> 方法。</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use tokio::io::AsyncReadExt;
+use bytes::Buf;
+use mini_redis::Result;
+
+pub async fn read_frame(&amp;mut self)
+    -&gt; Result&lt;Option&lt;Frame&gt;&gt;
+{
+    loop {
+        // Attempt to parse a frame from the buffered data. If
+        // enough data has been buffered, the frame is
+        // returned.
+        if let Some(frame) = self.parse_frame()? {
+            return Ok(Some(frame));
+        }
+
+        // There is not enough buffered data to read a frame.
+        // Attempt to read more data from the socket.
+        //
+        // On success, the number of bytes is returned. `0`
+        // indicates &quot;end of stream&quot;.
+        if 0 == self.stream.read_buf(&amp;mut self.buffer).await? {
+            // The remote closed the connection. For this to be
+            // a clean shutdown, there should be no data in the
+            // read buffer. If there is, this means that the
+            // peer closed the socket while sending a frame.
+            if self.buffer.is_empty() {
+                return Ok(None);
+            } else {
+                return Err(&quot;connection reset by peer&quot;.into());
+            }
+        }
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>让我们来分析一下它。 <code>read_frame</code> 方法操作了一个 loop。首先，<code>self.parse_frame()</code> 被调用。它会尝试从 <code>self.buffer</code> 解析 redis frame。如果 <code>self.buffer</code> 里的数据足够解析出一个 frame，那么这个解析出来的 frame 会从 <code>read_frame()</code> 返回。如果数据不够解析成一个 frame，我们就尝试从 socket 读取更多数据到 buffer。在读取更多数据后循环会重新开始， <code>parse_frame()</code> 会被再次调用，如此往复。这次，如果接收到了足够的数据，解析可能就会成功了。 </p>
+<p>当从 stream 读取的时候，返回了一个 <code>0</code> 表示没有更多数据可以从对端接收了。如果这时候 read buffer 中还留有数据，这表示接收到的是个不完整的 frame 并且对端被意外中断了。这是一个错误条件，我们返回一个 <code>Err</code> 。</p>
+<h3 id="the-buf-trait"><a class="header" href="#the-buf-trait">The <code>Buf</code> trait</a></h3>
+<p>当从 stream 读取的时候， <code>read_buf</code> 被调用了。我们这个版本的 read function 带了一个参数，要求实现 <a href="https://docs.rs/bytes/"><code>bytes</code></a> crate 中的 <a href="https://docs.rs/bytes/1/bytes/trait.BufMut.html"><code>BufMut</code></a>。</p>
+<p>首先，考虑怎样用 <code>read()</code> 实现相同的 read loop 。<code>Vec&lt;u8&gt;</code> 能够作为 <code>BytesMut</code> 的替代。</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use tokio::net::TcpStream;
+
+pub struct Connection {
+    stream: TcpStream,
+    buffer: Vec&lt;u8&gt;,
+    cursor: usize,
+}
+
+impl Connection {
+    pub fn new(stream: TcpStream) -&gt; Connection {
+        Connection {
+            stream,
+            // Allocate the buffer with 4kb of capacity.
+            buffer: vec![0; 4096],
+            cursor: 0,
+        }
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>然后是我们在 <code>Connection</code> 的 <code>read_frame()</code> 函数：</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use mini_redis::{Frame, Result};
+
+pub async fn read_frame(&amp;mut self)
+    -&gt; Result&lt;Option&lt;Frame&gt;&gt;
+{
+    loop {
+        if let Some(frame) = self.parse_frame()? {
+            return Ok(Some(frame));
+        }
+
+        // Ensure the buffer has capacity
+        if self.buffer.len() == self.cursor {
+            // Grow the buffer
+            self.buffer.resize(self.cursor * 2, 0);
+        }
+
+        // Read into the buffer, tracking the number
+        // of bytes read
+        let n = self.stream.read(
+            &amp;mut self.buffer[self.cursor..]).await?;
+
+        if 0 == n {
+            if self.cursor == 0 {
+                return Ok(None);
+            } else {
+                return Err(&quot;connection reset by peer&quot;.into());
+            }
+        } else {
+            // Update our cursor
+            self.cursor += n;
+        }
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>当使用字节数组和 <code>read</code> 时，我们也必须维护一个 cursor（用来定位当前有效数据的位置）来跟踪已经有多少数据被放入了 buffer 。我们必须确保传递 buffer 的空的部分（cursor 后面的那些位置）给 <code>read()</code>，否则会覆盖掉已经塞入 buffer 的数据。如果我们的 buffer 被填满了，我们还必须为 buffer 扩容来保证可以保持读取。在 <code>parse_frame()</code> （没包含在上面），我们需要解析 <code>self.buffer[..self.cursor]</code> 中包含的数据。</p>
+<p>因为将 byte array 和 cursor 配对是非常常见的，所以 <code>bytes</code> crate 提供了一个抽象来代表一个 byte array 和一个 cursor 。<code>Buf</code> trait 可以从能被 read 的数据实现。<code>Buf</code> trait 可以从能被 write 的数据实现。当传递一个 <code>T: BufMut</code> 给 <code>read_buf()</code> ，这个 buffer 内部的 cursor 会被 <code>read_buf</code> 自动更新。正因如此，我们这个版本的 <code>read_frame</code> 不需要管理自己的 cursor 。</p>
+<p>此外，当使用 <code>Vec&lt;u8&gt;</code> 的时候，buffer 必须被<strong>初始化</strong>。<code>vec![0;4096]</code> 这个宏申请了一个 4k 字节的数组并且往 Vector 中的每个条目写了 0 。这个初始化过程不是免费的。当使用 <code>BytesMut</code> 和 <code>BufMut</code> 的时候，容量是<strong>不需要</strong>初始化的（这个特性棒:D）。<code>BytesMut</code> 这个抽象会阻止我们从未初始化的内存中进行读，这使得我们避开了初始化的步骤。</p>
+<h2 id="parsing解析"><a class="header" href="#parsing解析">Parsing（解析）</a></h2>
+<p>现在，让我们瞅瞅看 <code>parse_frame()</code> 函数。解析由两个步骤完成。</p>
+<ol>
+<li>
+<p>确保缓冲了一个完整的 frame 并找到这个 frame 的索引位置。</p>
+</li>
+<li>
+<p>解析这个 frame。</p>
+</li>
+</ol>
+<p><code>mini-redis</code> crate 为以上两步都提供了一个函数：</p>
+<ol>
+<li>
+<p><code>Frame::check</code></p>
+</li>
+<li>
+<p><code>Frame::parse</code></p>
+</li>
+</ol>
+<p>我们还将复用 <code>Buf</code> 抽象来提供帮助。一个 <code>Buf</code> 被传递进 <code>Frame::check</code> 。当 <code>check</code> 函数迭代传进来的这个 buffer 的时候，内部的 cursor 会被推进。当 <code>check</code> 返回，这个 <code>Buf</code> 内部的 cursor 会指向 frame 的末尾。</p>
+<p>对于 <code>Buf</code> 类型，我们会使用 <a href="https://doc.rust-lang.org/stable/std/io/struct.Cursor.html"><code>std::io::Cursor&lt;&amp;[u8]&gt;</code></a> 。</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use mini_redis::{Frame, Result};
+use mini_redis::frame::Error::Incomplete;
+use bytes::Buf;
+use std::io::Cursor;
+
+fn parse_frame(&amp;mut self)
+    -&gt; Result&lt;Option&lt;Frame&gt;&gt;
+{
+    // 创建一个 `T: Buf`，Buf trait 在上面被引入了
+    // self.buffer 是一个 `BytesMut`，它实现了 Deref&lt;Target = [u8]&gt;
+    // 因此能当 [u8] 使
+    let mut buf = Cursor::new(&amp;self.buffer[..]);
+
+    // Check whether a full frame is available
+    match Frame::check(&amp;mut buf) {
+        Ok(_) =&gt; {
+            // Get the byte length of the frame
+            let len = buf.position() as usize;
+
+            // Reset the internal cursor for the
+            // call to `parse`.
+            buf.set_position(0);
+
+            // Parse the frame
+            let frame = Frame::parse(&amp;mut buf)?;
+
+            // Discard the frame from the buffer
+            self.buffer.advance(len);
+
+            // Return the frame to the caller.
+            Ok(Some(frame))
+        }
+        // Not enough data has been buffered
+        Err(Incomplete) =&gt; Ok(None),
+        // An error was encountered
+        Err(e) =&gt; Err(e.into()),
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>完整的 <a href="https://github.com/tokio-rs/mini-redis/blob/tutorial/src/frame.rs#L65-L103"><code>Frame::check</code></a> 函数可以在<a href="https://github.com/tokio-rs/mini-redis/blob/tutorial/src/frame.rs#L65-L103">这里</a>找到。我们的教程不会完全覆盖到它。</p>
+<p>需要注意的相关事项是 <code>Buf</code> 的 “byte iterator” 样式 API 被使用了。这些 API 被用来获取数据并推进内部的 cursor 。举个例子，为了操作一个 frame，首个字节被检查来决定这个 frame 的类型。这个被使用的函数是 <a href="https://docs.rs/bytes/1/bytes/buf/trait.Buf.html#method.get_u8"><code>Buf::get_u8</code></a> ，它会获取当前 cursor 的位置上的一个字节并且推 cursor 一个单位。</p>
+<p> <a href="https://docs.rs/bytes/1/bytes/buf/trait.Buf.html"><code>Buf</code></a> 还有很多更有用的方法。可以去 <a href="https://docs.rs/bytes/1/bytes/buf/trait.Buf.html">API docs</a> 看更多细节。</p>
+<h2 id="buffered-writes带缓冲地写"><a class="header" href="#buffered-writes带缓冲地写">Buffered writes（带缓冲地写）</a></h2>
+<p>framing 的另外一半 API 是 <code>write_frame(frame)</code> 函数。这个函数会把一个完整的 frame 写入到 socket 。为了最小化 <code>write</code> 系统调用的次数，写入操作都会被缓冲(buffered)。一个 write buffer 会被维护并且在往 socket 写入之前， frame 都会被 encode 到这个 buffer。然而，不同于 <code>read_frame()</code> ，在写入 socket 之前，并不总是会缓冲一整个 frame 。</p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="async-in-depth-todo"><a class="header" href="#async-in-depth-todo">Async in depth TODO</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
